# NBodySimulator

./: .clang-format  .gitignore  .gitmodules  BuildTest.sh  CleanEnvironment.sh  ClearTestRuns.sh  README.md  RunTest.sh  SetUpDevelopmentEnvironment.sh  SyncTestRuns.sh  test.sh
BuildCode/: Makefile  (+2 more)
SourceCode/: CMakeLists.txt
SourceCode/Bodies/BodyMgr/: CMakeLists.txt
SourceCode/Bodies/BodyMgr/ConstantDefs/: BodyMge_Const.h  BodyMgr_BodyType.h  BodyMgr_BodyTypeEnum.h  BodyMgr_Const.h
SourceCode/Bodies/BodyMgr/DataStructs/: BodyMgr_StateStruct.h
SourceCode/Bodies/BodyMgr/PrivateFunctions/: BodyMgr_PrivateFunctions.h  BodyMgr_loadBodyMgrParams.c
SourceCode/Bodies/BodyMgr/PublicFunctions/: BodyMgr_PublicFunctions.h  BodyMgr_findCelestialBody.c  BodyMgr_findSatelliteBody.c  BodyMgr_init.c  BodyMgr_step.c  BodyMgr_terminate.c
SourceCode/Bodies/BodyTypes/RigidBody/: CMakeLists.txt  RigidBody.h
SourceCode/Bodies/CelestialBody/: CMakeLists.txt
SourceCode/Bodies/CelestialBody/ConstantDefs/: CelestialBody_Const.h
SourceCode/Bodies/CelestialBody/DataStructs/: CelestialBody_StateStruct.h
SourceCode/Bodies/CelestialBody/PrivateFunctions/: CelestialBody_PrivateFunctions.h  CelestialBody_createArchives.c  CelestialBody_findResultantForce.c
SourceCode/Bodies/CelestialBody/PublicFunctions/: CelestialBody_PublicFunctions.h  CelestialBody_archiveData.c  CelestialBody_checkRotationAngle.c  CelestialBody_init.c  CelestialBody_step.c  CelestialBody_terminate.c
SourceCode/Bodies/RigidBody/: CMakeLists.txt  RigidBody.h
SourceCode/Bodies/RigidBody/ConstantDefs/: RigidBody_Const.h
SourceCode/Bodies/RigidBody/DataStructs/: RigidBody_StateStruct.h
SourceCode/Bodies/RigidBody/PrivateFunctions/: RigidBody_PrivateFunctions.h  RigidBody_archiveData.c  RigidBody_createArchives.c  RigidBody_findAngularAcceleration.c  RigidBody_findTranslationalAcceleration.c
SourceCode/Bodies/RigidBody/PublicFunctions/: RigidBody_PublicFunctions.h  RigidBody_archiveData.c  RigidBody_findAngularAcceleration.c  RigidBody_init.c  RigidBody_step.c  RigidBody_terminate.c
SourceCode/Bodies/SatelliteBody/: CMakeLists.txt
SourceCode/Bodies/SatelliteBody/ConstantDefs/: SatelliteBody_Const.h
SourceCode/Bodies/SatelliteBody/DataStructs/: SatelliteBody_StateStruct.h
SourceCode/Bodies/SatelliteBody/PrivateFunctions/: SatelliteBody_PrivateFunctions.h  SatelliteBody_createArchives.c  SatelliteBody_findResultantForce.c
SourceCode/Bodies/SatelliteBody/PublicFunctions/: SatelliteBody_PublicFunctions.h  SatelliteBody_archiveData.c  SatelliteBody_init.c  SatelliteBody_step.c  SatelliteBody_terminate.c
SourceCode/Bodies/UavBody/: CMakeLists.txt
SourceCode/Bodies/UavBody/ConstantDefs/: UavBody_Const.h
SourceCode/Bodies/UavBody/DataStructs/: UavBody_StateStruct.h
SourceCode/Bodies/UavBody/PrivateFunctions/: UavBody_PrivateFunctions.h  UavBody_createArchives.c  UavBody_findResultantForce.c
SourceCode/Bodies/UavBody/PublicFunctions/: UavBody_PublicFunctions.h  UavBody_archiveData.c  UavBody_init.c  UavBody_step.c  UavBody_terminate.c
SourceCode/GenericLibraries/GArchive/: CMakeLists.txt  GArchive.h
SourceCode/GenericLibraries/GArchive/ConstantDefs/: GArchive_Constants.h
SourceCode/GenericLibraries/GArchive/DataStructs/: GArchive_Struct.h
SourceCode/GenericLibraries/GArchive/PrivateFunctions/: GArchive_PrivateFunctions.h  GArchive_addColArray.c
SourceCode/GenericLibraries/GArchive/PublicFunctions/: GArchive_PublicFunctions.h  GArchive_addCol.c  GArchive_addVal.c  GArchive_archiveData.c  GArchive_checkFileExists.c  GArchive_close.c  GArchive_init.c  GArchive_writeHeader.c  GArchive_writeLine.c
SourceCode/GenericLibraries/GConst/: GConst.h
SourceCode/GenericLibraries/GConversions/: CMakeLists.txt  GConversions.h
SourceCode/GenericLibraries/GConversions/PublicFunctions/: GConversion_PublicFunctions.h  GConversions_string2double.c  GConversions_string2float.c  GConversions_string2int.c  GConversions_string2int8.c  GConversions_string2int_8.c  GConversions_string2uint.c  GConversions_string2uint16.c  GConversions_string2uint8.c
SourceCode/GenericLibraries/GIntegral/: CMakeLists.txt  GIntegral.h
SourceCode/GenericLibraries/GIntegral/PublicFunctions/: GIntegral_3x1Double.c  GIntegral_4x1Double.c  GIntegral_PublicFunctions.h
SourceCode/GenericLibraries/GLegPoly/: CMakeLists.txt  GLegPoly.h  README.md
SourceCode/GenericLibraries/GLegPoly/ConstantDefs/: GLegPoly_Const.h
SourceCode/GenericLibraries/GLegPoly/PublicFunctions/: GLegPoly_PublicFunctions.h  GLegPoly_associatedLegendreArrayPolynomials.c  GLegPoly_associatedLegendreArrayPolynomialsDerivitive.c  GLegPoly_findSchmidtQuasiNormFactors.c  GLegPoly_legendreArrayPolynomials.c  GLegPoly_legendrePolynomial.c
SourceCode/GenericLibraries/GLegendrePoly/: CMakeLists.txt
SourceCode/GenericLibraries/GLegendrePoly/ConstantDefs/: GLegendrePoly_Const.h
SourceCode/GenericLibraries/GLegendrePoly/PublicFunctions/: GLegendrePoly_PublicFunctions.h  GLegendrePoly_findArrayOutput.c  GLegendrePoly_findAssociatedArrayOutput.c  GLegendrePoly_findAssociatedDerivitiveArrayOutput.c  GLegendrePoly_findSingleOutput.c
SourceCode/GenericLibraries/GLog/: GLog.h
SourceCode/GenericLibraries/GMath/: CMakeLists.txt  GMath.h
SourceCode/GenericLibraries/GParser/: CMakeLists.txt  GParser.h
SourceCode/GenericLibraries/GRand/: CMakeLists.txt  GRand.h
SourceCode/GenericLibraries/GTime/: CMakeLists.txt  GTime.h
SourceCode/GenericLibraries/GUtilities/: CMakeLists.txt  GUtilities.h
SourceCode/GenericLibraries/GZero/: GZero.h
SourceCode/GncAlgorithms/: READMD.md
SourceCode/GncAlgorithms/SensorFilters/: CMakeLists.txt
SourceCode/Physics/Gravity/: CMakeLists.txt
SourceCode/Physics/Igrf/: CMakeLists.txt
SourceCode/Sensors/Gyro/: CMakeLists.txt
SourceCode/Sensors/Magnetometer/: CMakeLists.txt
SourceCode/Sensors/SunSensor/: CMakeLists.txt
SourceCode/Systems/JamSail/: CMakeLists.txt
SourceCode/TestCase/JamSailSimulation/: CMakeLists.txt  main.c
SourceCode/TestCase/SimTest/: CMakeLists.txt
SourceCode/TestCase/SystemTest/: CMakeLists.txt  main.c
(+323 files in other folders)
