add_library(GMath
  PrivateFunctions/GMath_backwardPropogation.c
  PrivateFunctions/GMath_forwardPropogation.c
  PrivateFunctions/GMath_invColOptimised.c
  PrivateFunctions/GMath_luDecomp.c
  PublicFunctions/GMath_invCol.c
  PublicFunctions/GMath_invMat.c
  PublicFunctions/GMath_quaternionRateCalc.c
  PublicFunctions/GMath_vectorMag.c
  PublicFunctions/Gmath_vectorNorm.c
)
