add_library(GMath
  PrivateFunctions/GMath_backwardPropogation.c
  PrivateFunctions/GMath_forwardPropogation.c
  PrivateFunctions/GMath_invColOptimised.c
  PrivateFunctions/GMath_luDecomp.c
  PublicFunctions/GMath_abs.c
  PublicFunctions/GMath_crossProduct.c
  PublicFunctions/GMath_dcm2Eul.c
  PublicFunctions/GMath_dcm2Quat.c
  PublicFunctions/GMath_eul2Dcm.c
  PublicFunctions/GMath_eul2Quat.c
  PublicFunctions/GMath_findUnitQuaternion.c
  PublicFunctions/GMath_findUnitVector.c
  PublicFunctions/GMath_invCol.c
  PublicFunctions/GMath_invMat.c
  PublicFunctions/GMath_matAdd.c
  PublicFunctions/GMath_matMul.c
  PublicFunctions/GMath_matMul3x3by3x3.c
  PublicFunctions/GMath_matSub.c
  PublicFunctions/GMath_quaternion2Dcm.c
  PublicFunctions/GMath_quaternion2Eul.c
  PublicFunctions/GMath_quaternionConjugate.c
  PublicFunctions/GMath_quaternionFrameRotation.c
  PublicFunctions/GMath_quaternionMul.c
  PublicFunctions/GMath_quaternionPointRotation.c
  PublicFunctions/GMath_quaternionRateCalc.c
  PublicFunctions/GMath_vectorMag.c
  PublicFunctions/GMath_vectorNorm.c
  PublicFunctions/GMath_vectorSub.c
)
